https://gitlab.com/plvr/ndm/ndm-project/-/issues/332 - Updated the Meta description tag, - updated the html title, - Fixed the rate per night. It was showing up in the thousands., - Fixed css on the Destination PackageTile, - Added an Image Carousel to the DestinationPackageTile, - Changed some stuff up on the Itinerary Info Card, - Updated the LabelInput to have other types, - Made the Reservation Accordion mobile friendly, - Added Upsell Packages to the ReservationDetailsAccordion, - Removed the reservation.model.ts folder. (I changed the getByPaged endpoint), - Made the EditExistingServicesPage, - Removed the "I Agree with the privacy terms and booking conditions, - Misc site clean ups,

--- a/src/pages/landingPage/LandingPage.scss
+++ b/src/pages/landingPage/LandingPage.scss
@@ -21,9 +21,18 @@
 		background-image: url('../../images/landingPage/hero-image.png');
 		background-repeat: no-repeat;
 		background-position: center;
-		width: 1257px;
+		width: 100%;
 		height: 729px;
 		margin-bottom: 135px;
+		&:before {
+			content: '';
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			top: 0;
+			right: 0;
+			background: linear-gradient(180deg, white 0%, rgba(255, 255, 255, 0) 19%);
+		}
 		.heroText {
 			font-size: 60px;
 			line-height: 70px;
@@ -214,7 +223,7 @@
 			height: 388px;
 		}
 		.heroImgAndText {
-			width: 321px;
+			width: 100%;
 			height: 423px;
 			padding-left: 20px;
 			.heroText {
